--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <section id="sobre">
         <div class="container">
-            <img src="/images/loja.jpg" alt="fachada da loja">
+            <img src="loja.jpg" alt="fachada da loja">
             <div>   
                 <h2>Sobre a loja</h2>
                 <p>
@@ -34,9 +34,9 @@
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis dolore esse in voluptatum nulla mollitia obcaecati! Deleniti laborum error rerum. Ea dolore doloribus temporibus tempore repellat ipsum facere placeat deserunt?
                 </p>
                 <ul class="marcas">
-                    <li><img src="images/nintendo.png" alt="Nintendo"></li>
-                    <li><img src="images/xbox.png" alt="Xbox"></li>
-                    <li><img src="images/playstation.png" alt="playstation"></li>
+                    <li><img src="nintendo.png" alt="Nintendo"></li>
+                    <li><img src="xbox.png" alt="Xbox"></li>
+                    <li><img src="playstation.png" alt="playstation"></li>
                 </ul>
             </div>
         </div>                
@@ -60,17 +60,17 @@
                     <ul class="social-links">
                         <li>
                             <a href="#" title="Siga-nos no instagran">
-                                <img src="images/instagram.png" alt="Logo do instagran">
+                                <img src="instagram.png" alt="Logo do instagran">
                             </a>
                         </li>
                         <li>
                             <a href="#" title="Siga-nos no facebook">
-                                <img src="images/facebook.png" alt="Logo do facebook">
+                                <img src="facebook.png" alt="Logo do facebook">
                             </a>
                         </li>
                         <li>
                             <a href="#" title="Visite nosso canal no Youtube">
-                                <img src="images/youtube.png" alt="Logo do youtube">
+                                <img src="youtube.png" alt="Logo do youtube">
                             </a>
                         </li>
                     </ul>                                       
